[gd_scene load_steps=13 format=3 uid="uid://2pxswwi7gs3c"]

[ext_resource type="Script" path="res://interface/hud/PlayerHud.gd" id="1_c2vwx"]
[ext_resource type="PackedScene" uid="uid://6c0nmw03t3c7" path="res://interface/hud/ManaBar.tscn" id="2_whi21"]
[ext_resource type="FontFile" uid="uid://cccv1lbg55ags" path="res://Assets/DungeonFont.ttf" id="3_crlil"]
[ext_resource type="PackedScene" uid="uid://cxdepm6ksokn3" path="res://interface/hud/StaminaBar.tscn" id="3_v40p8"]
[ext_resource type="PackedScene" uid="uid://biu3xvae7hxfd" path="res://interface/hud/HealthBar.tscn" id="4_gyrj6"]
[ext_resource type="PackedScene" uid="uid://dwp7u37ibxbmv" path="res://interface/hotbar/HotBar.tscn" id="5_scdiu"]
[ext_resource type="Texture2D" uid="uid://gac2lwmm34sf" path="res://Assets/GUI/GUI_2x.png" id="7_hbsha"]
[ext_resource type="Texture2D" uid="uid://crgdx5iqxvvjn" path="res://Assets/GUI/GUI_1x.png" id="8_bpqw1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hbrf2"]
atlas = ExtResource("7_hbsha")
region = Rect2(146, 144, 12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h5lt"]
atlas = ExtResource("8_bpqw1")
region = Rect2(89, 72, 6, 8)

[sub_resource type="Animation" id="Animation_26b0h"]
resource_name = "show_death_toast"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DiedToast/Panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 3.6, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DiedToast/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.7, 3.3, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DiedToast/Label:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.825, 0.825), Vector2(0.85, 0.85), Vector2(0.875, 0.875), Vector2(0.9, 0.9), Vector2(0.925, 0.925), Vector2(0.95, 0.95), Vector2(0.975, 0.975), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jcdo4"]
_data = {
"show_death_toast": SubResource("Animation_26b0h")
}

[node name="PlayerHud" type="CanvasLayer"]
script = ExtResource("1_c2vwx")

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 43.0

[node name="HealthBar" parent="Health" instance=ExtResource("4_gyrj6")]
layout_mode = 0
offset_left = 20.0
offset_top = 14.0
offset_right = 195.0
offset_bottom = 26.0

[node name="HealthPoints" type="Label" parent="Health"]
texture_filter = 1
layout_mode = 0
offset_left = 197.0
offset_top = 10.0
offset_right = 241.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("3_crlil")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mana" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ManaBar" parent="Mana" instance=ExtResource("2_whi21")]
layout_mode = 0
offset_left = 20.0
offset_top = 36.0
offset_right = 140.0
offset_bottom = 48.0

[node name="ManaPoints" type="Label" parent="Mana"]
texture_filter = 1
layout_mode = 0
offset_left = 141.0
offset_top = 32.0
offset_right = 181.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("3_crlil")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stamina" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 22.0
offset_right = 40.0
offset_bottom = 62.0

[node name="StaminaBar" parent="Stamina" instance=ExtResource("3_v40p8")]
layout_mode = 0
offset_left = 20.0
offset_top = 33.0
offset_right = 140.0
offset_bottom = 45.0

[node name="StaminaPoints" type="Label" parent="Stamina"]
texture_filter = 1
layout_mode = 0
offset_left = 142.0
offset_top = 29.0
offset_right = 182.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("3_crlil")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hotbar" parent="." instance=ExtResource("5_scdiu")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -74.0
offset_right = 21.0
offset_bottom = -74.0
grow_vertical = 0

[node name="Runes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="RuneIcon" type="TextureRect" parent="Runes"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -63.0
offset_right = -119.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("AtlasTexture_hbrf2")

[node name="RunesHeldLabel" type="Label" parent="Runes"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -61.0
offset_right = -60.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_crlil")
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="Keys" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 2.0
offset_bottom = -4.0

[node name="KeyIcon" type="TextureRect" parent="Keys"]
texture_filter = 1
layout_mode = 0
offset_left = 21.0
offset_top = 80.0
offset_right = 36.0
offset_bottom = 98.0
texture = SubResource("AtlasTexture_0h5lt")
metadata/_edit_use_anchors_ = true

[node name="KeysHeldLabel" type="Label" parent="Keys"]
texture_filter = 1
layout_mode = 0
offset_left = 40.0
offset_top = 79.0
offset_right = 80.0
offset_bottom = 102.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_crlil")
text = "1"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DiedToast" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="DiedToast"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="DiedToast"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -21.0
offset_right = 289.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(289, 21)
theme_override_colors/font_color = Color(0.941176, 0.0431373, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_crlil")
theme_override_font_sizes/font_size = 40
text = "THE DESERT CLAIMS YOUR SOUL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jcdo4")
}
